--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -24,7 +24,7 @@ nav ul{overflow:hidden; overflow-y:scroll;}*?
 
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: url('../img/night.jpeg') no-repeat center center fixed;
+    background: url('../img/trianglify.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
