--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,4 +1,4 @@
-/*!
+favicon/*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
@@ -3252,6 +3252,7 @@ fieldset[disabled] .btn-success.focus {
 }
 .btn-info:active:hover,
 .btn-info.active:hover,
+
 .open > .dropdown-toggle.btn-info:hover,
 .btn-info:active:focus,
 .btn-info.active:focus,
